<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="action_settings">Settings</string>
    <string name="set_connection_settings_message">Please configure your connection settings first</string>
    <string name="status_update_posting_title">Posting…</string>
    <string name="new_status_notification_title">Updated timeline</string>
    <string name="new_status_notification_text">You have %d new status updates</string>
    <string name="status_update_posting_text">Posting your status update to Yamba</string>
    <string name="status_update_failure">Failed to post your status!</string>
    <string name="status_update_success">Posted your status in %.3f seconds!</string>
    <string name="status_text_hint">What\'s happening?</string>
    <string name="status_button_text">Tweet</string>
    <string name="username">Username</string>
    <string name="username_prefs_title">@string/username</string>
    <string name="username_prefs_summary">Your Yamba service username</string>
    <string name="password_prefs_title">Password</string>
    <string name="password_prefs_summary">The password you use to login to Yamba</string>
    <string name="api_url_prefs_title">API URL</string>
    <string name="api_url_prefs_summary">The Yamba Service API URL</string>
    <string name="action_refresh">Refresh</string>
    <string name="connection_settings_pref_category_title">Connection Settings</string>
    <string name="connection_settings_pref_category_summary">Connection settings for your Yamba service</string>
    <string name="send_location_pref_title">Send location?</string>
    <string name="send_location_pref_summary">Include your location in the status messages you post?</string>
    <string name="refresh_interval_disabled">Never</string>
    <string name="refresh_interval_15m">Every fifteen minutes</string>
    <string name="refresh_interval_30m">Every half hour</string>
    <string name="refresh_interval_1h">Once per hour</string>
    <string name="refresh_interval_12h">Twice a day</string>
    <string name="refresh_interval_1d">Once a day</string>
    <string name="refresh_interval_prefs_title">Auto refresh?</string>
    <string name="refresh_interval_prefs_summary">How often should we auto-refresh your timeline?</string>
    <string name="empty_timeline_message">Your timeline is empty. Refresh to get your friends\' posts.</string>
    <string name="action_compose">Compose</string>
    <string name="action_timeline">Timeline</string>
    <string name="action_repost">Repost</string>
    <string name="yamba_permission_group_label">Yamba Permissions</string>
    <string name="read_timeline_data_permission_description">Applications with this permission can read your entire Yamba timeline</string>
    <string name="read_timeline_data_permission_label">Read your timeline</string>
    <string name="write_timeline_data_permission_description">Applications with this permission can modify (and corrupt) your entire Yamba timeline</string>
    <string name="write_timeline_data_permission_label">Write your timeline</string>
    <string name="receive_new_status_permission_label">Receive status notification</string>
    <string name="receive_new_status_permission_description">Applications with this permissions can be notified when new status messages are fetched from Yamba</string>

</resources>