<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:orderInCategory="25"
        android:showAsAction="always|withText"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_compose"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="50"
        android:showAsAction="always|withText"
        android:title="@string/action_compose"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>

</menu>